--- a/Views/Inventory/Index.cshtml
+++ b/Views/Inventory/Index.cshtml
@@ -13,10 +13,10 @@
             <table class="table table-hover">
                 <tr class="">
                     <th>
-                        @Html.DisplayNameFor(model => model.Transaction_ID)
+                        Transaction ID
                     </th>
                     <th>
-                        @Html.DisplayNameFor(model => model.Total_Amount)
+                        Total_Amount
                     </th>
                     <th>
                         @Html.DisplayNameFor(model => model.Date)
